# Prompt2Sim-pipeline

./: .env.example  .gitignore  README.md  TECHNICAL_PROGRESS_REPORT.md  pyproject.toml  requirements.txt
configs/: artifact_sync.yaml  asset_registry.yaml  default.yaml  hf_simready_warehouse_manifest.yaml  mujoco_eval.yaml  scenethesis_faithful.yaml  warehouse.yaml  warehouse_asset_registry.yaml  warehouse_vision.yaml
docs/: MUJOCO_POLICY_EVALUATION.md  PAPER_FAITHFUL_RECREATION_PLAN.md  TECHNICAL_PROGRESS_REPORT.md  lerobot_phase1_checkpoints.md  project_architecture_flowchart.md
scripts/: build_asset_visual_profiles.py  build_clip_asset_index.py  build_project_warehouse_assets.py  derive_open_worktable.py  download_faithful_checkpoints.py  evaluate_mujoco_scene.py  export_lerobot_dataset_from_mujoco.py  import_hf_simready_assets.py  import_polyhaven_assets.py  import_polyhaven_materials.py  install_groundingdino_windows.ps1  install_pytorch3d_windows.ps1  record_mujoco_demonstrations.py  render_asset_thumbnails.py  render_scene.py  run_demo.py  run_faithful.py  setup_faithful_env.ps1  sync_training_artifacts.py  train_lerobot_policy.py
tests/: test_artifact_sync.py  test_asset_registry.py  test_collision.py  test_controlled_asset_manifest.py  test_faithful_runtime.py  test_grs_asset_retrieval.py  test_guidance_validation.py  test_joint_pose_optimizer.py  test_judge_reconcile.py  test_layout_optimizer.py  test_lerobot_phase1.py  test_mesh_physics.py  test_mujoco_bridge.py  test_openai_client.py  test_openai_schema.py  test_pipeline_diagnostics.py  test_schema.py  (+2 more)
(+106 files in other folders)
