[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "scenethesis-mvp"
version = "0.1.0"
description = "A lightweight Scenethesis-inspired text-to-3D scene MVP."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "openai>=1.0.0",
  "numpy>=1.23.0",
  "pydantic>=2.5.0",
  "PyYAML>=6.0.0",
  "python-dotenv>=1.0.0",
  "trimesh>=4.0.0",
  "rtree>=1.4.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
